# src/routes/metrics.routes.ts
@@ -1,0 +1,8 @@
+import { IRouter, Router } from 'express';
+import { getApplicationMetrics } from '../controllers/metrics.controller';
+
+const router: IRouter = Router();
+
+router.get('/', getApplicationMetrics);
+
+export default router;
